webapp/small_project on cloud/webapp/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /

spec:
  ingressClassName: alb
  
  rules:
  - http:
      paths:

      - path: /products
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000

      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000

      - path: /reviews
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
